оформление фрмі в модальном окне

--- a/portfolio.html
+++ b/portfolio.html
@@ -270,6 +270,15 @@
               </svg></a></li>
         </ul>
       </div>
+      <div class="mailing-form">
+        <h3 class="title social">Подпишитесь на рассылку</h3>
+        <form class="mailing-form-list">
+          <input type="email" name="mail" placeholder="E-mail" required>
+          <button type="submit" class="button primary">Подписаться <svg>
+            <use href="./images/sprite.svg#send"></use>
+          </svg></button>
+        </form>
+      </div>
     </div>
   </footer>
 
